@@ -21,13 +21,17 @@ package org.apache.tajo.worker;
 import org.apache.commons.lang.exception.ExceptionUtils;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
+import org.apache.tajo.ExecutionBlockId;
 import org.apache.tajo.SessionVars;
 import org.apache.tajo.catalog.Schema;
 import org.apache.tajo.engine.codegen.ExecutorPreCompiler;
 import org.apache.tajo.engine.codegen.TajoClassLoader;
 import org.apache.tajo.engine.json.CoreGsonHelper;
 import org.apache.tajo.engine.query.QueryContext;
-import org.apache.tajo.plan.PlanningException;
+import org.apache.tajo.engine.utils.CacheHolder;
+import org.apache.tajo.engine.utils.TableCache;
+import org.apache.tajo.engine.utils.TableCacheKey;
+import org.apache.tajo.exception.TajoException;
 import org.apache.tajo.plan.expr.EvalNode;
 import org.apache.tajo.plan.logical.LogicalNode;
 import org.apache.tajo.util.Pair;
@@ -37,7 +41,8 @@ import java.util.concurrent.atomic.AtomicBoolean;
 public class ExecutionBlockSharedResource {
   private static Log LOG = LogFactory.getLog(ExecutionBlockSharedResource.class);
   private AtomicBoolean initializing = new AtomicBoolean(false);
-  private volatile Boolean resourceInitSuccess = new Boolean(false);
+  private volatile Boolean resourceInitSuccess = Boolean.valueOf(false);
+  private final Object lock = new Object();
 
   // Query
   private QueryContext context;
@@ -71,7 +76,7 @@ public class ExecutionBlockSharedResource {
     plan = CoreGsonHelper.fromJson(planJson, LogicalNode.class);
   }
 
-  private void initCodeGeneration() throws PlanningException {
+  private void initCodeGeneration() throws TajoException {
     if (context.getBool(SessionVars.CODEGEN)) {
       codeGenEnabled = true;
       classLoader = new TajoClassLoader();
@@ -91,7 +96,7 @@ public class ExecutionBlockSharedResource {
   public EvalNode getPreCompiledEval(Schema schema, EvalNode eval) {
     if (codeGenEnabled) {
 
-      Pair<Schema, EvalNode> key = new Pair<Schema, EvalNode>(schema, eval);
+      Pair<Schema, EvalNode> key = new Pair<>(schema, eval);
       if (compilationContext.getPrecompiedEvals().containsKey(key)) {
         return compilationContext.getPrecompiedEvals().get(key);
       } else {
@@ -99,13 +104,34 @@ public class ExecutionBlockSharedResource {
           LOG.warn(eval.toString() + " does not exists. Immediately compile it: " + eval);
           return compileEval(schema, eval);
         } catch (Throwable t) {
-          LOG.warn(t);
+          LOG.warn(t, t);
           return eval;
         }
       }
     } else {
       throw new IllegalStateException("CodeGen is disabled");
     }
+  }
+
+  /* This is guarantee a lock for a ExecutionBlock */
+  public synchronized Object getLock() {
+    return lock;
+  }
+
+  public boolean hasBroadcastCache(TableCacheKey key) {
+    return TableCache.getInstance().hasCache(key);
+  }
+
+  public <T extends Object> CacheHolder<T> getBroadcastCache(TableCacheKey key) {
+    return (CacheHolder<T>) TableCache.getInstance().getCache(key);
+  }
+
+  public void addBroadcastCache(TableCacheKey cacheKey,  CacheHolder<?> cacheData) {
+    TableCache.getInstance().addCache(cacheKey, cacheData);
+  }
+
+  public void releaseBroadcastCache(ExecutionBlockId id) {
+    TableCache.getInstance().releaseCache(id);
   }
 
   public void release() {
